sample object edit

--- a/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/updated-ecommerce_dense_sparse_project.ipynb
+++ b/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/updated-ecommerce_dense_sparse_project.ipynb
@@ -20,7 +20,7 @@
     "```json\n",
     " {\n",
     "    \"product\": \"Samsung 49-inch Curved Gaming Monitor\",\n",
-    "    \"description\": \"is a curved gaming monitor with a high refresh rate and AMD FreeSync technology. It offers an immersive gaming experience with smooth visuals.\",\n",
+    "    \"description\": \"is a curved gaming monitor with a high refresh rate and AMD FreeSync technology.\",\n",
     "    \"category\": \"Monitors\"\n",
     "}\n",
     "\n",
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 78,
    "id": "6739f55b-6983-4b48-9349-6e0111b313fe",
    "metadata": {
     "id": "6739f55b-6983-4b48-9349-6e0111b313fe"
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "9b53b39e-d74e-4fa8-a364-e2c3caf37418",
    "metadata": {
     "id": "9b53b39e-d74e-4fa8-a364-e2c3caf37418"
@@ -330,8 +330,8 @@
     "            \"inference_id\": e5_endpoint,\n",
     "        },\n",
     "        \"elser_semantic_description_vector\": {\n",
-    "            \"type\": \"semantic_text\",\n",
-    "            \"inference_id\": elser_endpoint,\n",
+    "            \"type\": \"semantic_text\"\n",
+    "            # \"inference_id\": elser_endpoint\n",
     "        },\n",
     "    }\n",
     "}\n",
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 83,
    "id": "c4830b74",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "3cfdc3b7-7e4f-4111-997b-c333ac8938ba",
    "metadata": {
     "id": "3cfdc3b7-7e4f-4111-997b-c333ac8938ba"
@@ -415,6 +415,9 @@
     "\n",
     "# helper function to create bulk indexing body\n",
     "def create_index_body(doc):\n",
+    "    doc[\"elser_semantic_description_vector\"] = doc[\"description\"]\n",
+    "    doc[\"e5_semantic_description_vector\"] = doc[\"description\"]\n",
+    "\n",
     "    return {\n",
     "        \"_index\": \"ecommerce-search\",\n",
     "        \"_source\": doc,\n",
@@ -528,10 +531,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "d44f3e2b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Custom Tokens: ['comfortable', 'furniture', 'for', 'a', 'large', 'balcony']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True})"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "index_settings = {\n",
     "    \"settings\": {\n",
@@ -624,12 +645,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "f4984f6c-ceec-46a4-b64c-f749e6b1b04f",
    "metadata": {
     "id": "f4984f6c-ceec-46a4-b64c-f749e6b1b04f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Score: 12.93728\n",
+      "Product: Barbie Dreamhouse\n",
+      "Category: Toys\n",
+      "Description: is a classic Barbie playset with multiple rooms, furniture, a large balcony, a pool, and accessories. It allows kids to create their dream Barbie world.\n",
+      "\n",
+      "\n",
+      "Score: 7.9097595\n",
+      "Product: Rattan Patio Conversation Set\n",
+      "Category: Outdoor Furniture\n",
+      "Description: is a stylish and comfortable outdoor furniture set, including a sofa, two chairs, and a coffee table, all made of durable rattan material.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "results_list = []\n",
     "\n",
@@ -680,12 +720,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "72187c9a-14c1-4084-a080-4e5c1e614f22",
    "metadata": {
     "id": "72187c9a-14c1-4084-a080-4e5c1e614f22"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Score: 0.93147576\n",
+      "Product: Metal Garden Bench with Cushion\n",
+      "Category: Garden Furniture\n",
+      "Description: is a stylish and comfortable metal garden bench, complete with a cushion for added support.\n",
+      "\n",
+      "\n",
+      "Score: 0.9304026\n",
+      "Product: Garden Dining Set with Swivel Chairs\n",
+      "Category: Garden Furniture\n",
+      "Description: is a functional and comfortable garden dining set, including a table and chairs with swivel seats for convenience.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# KNN\n",
     "# TODO: Add Semantic_Text type?\n",
@@ -723,10 +782,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "c5475e21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Score: 11.354144\n",
+      "Product: Garden Lounge Set with Side Table\n",
+      "Category: Garden Furniture\n",
+      "Description: is a comfortable and stylish garden lounge set, including a sofa, chairs, and a side table for outdoor relaxation.\n",
+      "\n",
+      "\n",
+      "Score: 11.200024\n",
+      "Product: Garden Lounge Set with Ottoman\n",
+      "Category: Garden Furniture\n",
+      "Description: is a versatile and comfortable garden lounge set, including a sofa, chairs, and ottoman for outdoor relaxation.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Elastic Learned Sparse Encoder - ELSER\n",
     "\n",
@@ -759,17 +837,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "2c0bf5fc-ab32-4f33-8f26-904ff10635a5",
-   "metadata": {
-    "id": "2c0bf5fc-ab32-4f33-8f26-904ff10635a5"
-   },
+   "execution_count": 93,
+   "id": "4d2fb926",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No matches found\n"
+      "\n",
+      "Score: 11.354144\n",
+      "Product: Garden Lounge Set with Side Table\n",
+      "Category: Garden Furniture\n",
+      "Description: is a comfortable and stylish garden lounge set, including a sofa, chairs, and a side table for outdoor relaxation.\n",
+      "\n",
+      "\n",
+      "Score: 11.200024\n",
+      "Product: Garden Lounge Set with Ottoman\n",
+      "Category: Garden Furniture\n",
+      "Description: is a versatile and comfortable garden lounge set, including a sofa, chairs, and ottoman for outdoor relaxation.\n",
+      "\n"
      ]
     }
    ],
@@ -788,6 +875,60 @@
     "    source_excludes=[\"*_description_vector\"],  # Exclude vector fields from response\n",
     ")\n",
     "\n",
+    "elser_semantic_text_search_results = resp[\"hits\"][\"hits\"]\n",
+    "results_list.append({\"elser_semantic_text_search\": sparse_semantic_search_results})\n",
+    "print_search_results(elser_semantic_text_search_results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1df079f3",
+   "metadata": {},
+   "source": [
+    "## Semantic Search with `semantic_text` Type (e5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "2c0bf5fc-ab32-4f33-8f26-904ff10635a5",
+   "metadata": {
+    "id": "2c0bf5fc-ab32-4f33-8f26-904ff10635a5"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Score: 0.93147576\n",
+      "Product: Metal Garden Bench with Cushion\n",
+      "Category: Garden Furniture\n",
+      "Description: is a stylish and comfortable metal garden bench, complete with a cushion for added support.\n",
+      "\n",
+      "\n",
+      "Score: 0.9304026\n",
+      "Product: Garden Dining Set with Swivel Chairs\n",
+      "Category: Garden Furniture\n",
+      "Description: is a functional and comfortable garden dining set, including a table and chairs with swivel seats for convenience.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Elastic Learned Sparse Encoder - ELSER\n",
+    "\n",
+    "resp = client.search(\n",
+    "    index=\"ecommerce-search\",\n",
+    "    size=2,\n",
+    "    query={\n",
+    "        \"semantic\": {\n",
+    "            \"field\": \"e5_semantic_description_vector\",\n",
+    "            \"query\": \"Comfortable furniture for a large balcony\",\n",
+    "        }\n",
+    "    },\n",
+    "    source_excludes=[\"*_description_vector\"],  # Exclude vector fields from response\n",
+    ")\n",
     "\n",
     "elser_semantic_text_search_results = resp[\"hits\"][\"hits\"]\n",
     "results_list.append({\"elser_semantic_text_search\": sparse_semantic_search_results})\n",
