removes commented code

--- a/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/updated-ecommerce_dense_sparse_project.ipynb
+++ b/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/updated-ecommerce_dense_sparse_project.ipynb
@@ -223,20 +223,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "6739f55b-6983-4b48-9349-6e0111b313fe",
    "metadata": {
     "id": "6739f55b-6983-4b48-9349-6e0111b313fe"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ecommerce-pipeline created: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "index_pipeline = \"ecommerce-pipeline\"\n",
     "resp = client.ingest.put_pipeline(\n",
@@ -290,20 +282,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "9b53b39e-d74e-4fa8-a364-e2c3caf37418",
    "metadata": {
     "id": "9b53b39e-d74e-4fa8-a364-e2c3caf37418"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index ecommerce-search created: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# define the index name and mapping\n",
     "commerce_index = \"ecommerce-search\"\n",
@@ -329,10 +313,7 @@
     "            \"type\": \"semantic_text\",\n",
     "            \"inference_id\": e5_endpoint,\n",
     "        },\n",
-    "        \"elser_semantic_description_vector\": {\n",
-    "            \"type\": \"semantic_text\"\n",
-    "            # \"inference_id\": elser_endpoint\n",
-    "        },\n",
+    "        \"elser_semantic_description_vector\": {\"type\": \"semantic_text\"},\n",
     "    }\n",
     "}\n",
     "\n",
@@ -358,18 +339,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "c4830b74",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pipeline set for ecommerce-search: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "resp = client.indices.put_settings(\n",
     "    index=commerce_index,\n",
@@ -397,16 +370,7 @@
    "metadata": {
     "id": "3cfdc3b7-7e4f-4111-997b-c333ac8938ba"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Indexing documents...\n",
-      "Documents indexed successfully: 2506\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the dataset\n",
     "with open(\"products-ecommerce.json\", \"r\") as f:\n",
@@ -531,28 +495,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "d44f3e2b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Custom Tokens: ['comfortable', 'furniture', 'for', 'a', 'large', 'balcony']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "ObjectApiResponse({'acknowledged': True})"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "index_settings = {\n",
     "    \"settings\": {\n",
@@ -645,31 +591,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "f4984f6c-ceec-46a4-b64c-f749e6b1b04f",
    "metadata": {
     "id": "f4984f6c-ceec-46a4-b64c-f749e6b1b04f"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Score: 12.93728\n",
-      "Product: Barbie Dreamhouse\n",
-      "Category: Toys\n",
-      "Description: is a classic Barbie playset with multiple rooms, furniture, a large balcony, a pool, and accessories. It allows kids to create their dream Barbie world.\n",
-      "\n",
-      "\n",
-      "Score: 7.9097595\n",
-      "Product: Rattan Patio Conversation Set\n",
-      "Category: Outdoor Furniture\n",
-      "Description: is a stylish and comfortable outdoor furniture set, including a sofa, two chairs, and a coffee table, all made of durable rattan material.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results_list = []\n",
     "\n",
@@ -720,31 +647,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "72187c9a-14c1-4084-a080-4e5c1e614f22",
    "metadata": {
     "id": "72187c9a-14c1-4084-a080-4e5c1e614f22"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Score: 0.93147576\n",
-      "Product: Metal Garden Bench with Cushion\n",
-      "Category: Garden Furniture\n",
-      "Description: is a stylish and comfortable metal garden bench, complete with a cushion for added support.\n",
-      "\n",
-      "\n",
-      "Score: 0.9304026\n",
-      "Product: Garden Dining Set with Swivel Chairs\n",
-      "Category: Garden Furniture\n",
-      "Description: is a functional and comfortable garden dining set, including a table and chairs with swivel seats for convenience.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# KNN\n",
     "# TODO: Add Semantic_Text type?\n",
@@ -782,29 +690,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "c5475e21",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Score: 11.354144\n",
-      "Product: Garden Lounge Set with Side Table\n",
-      "Category: Garden Furniture\n",
-      "Description: is a comfortable and stylish garden lounge set, including a sofa, chairs, and a side table for outdoor relaxation.\n",
-      "\n",
-      "\n",
-      "Score: 11.200024\n",
-      "Product: Garden Lounge Set with Ottoman\n",
-      "Category: Garden Furniture\n",
-      "Description: is a versatile and comfortable garden lounge set, including a sofa, chairs, and ottoman for outdoor relaxation.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Elastic Learned Sparse Encoder - ELSER\n",
     "\n",
@@ -837,29 +726,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "4d2fb926",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Score: 11.354144\n",
-      "Product: Garden Lounge Set with Side Table\n",
-      "Category: Garden Furniture\n",
-      "Description: is a comfortable and stylish garden lounge set, including a sofa, chairs, and a side table for outdoor relaxation.\n",
-      "\n",
-      "\n",
-      "Score: 11.200024\n",
-      "Product: Garden Lounge Set with Ottoman\n",
-      "Category: Garden Furniture\n",
-      "Description: is a versatile and comfortable garden lounge set, including a sofa, chairs, and ottoman for outdoor relaxation.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Elastic Learned Sparse Encoder - ELSER\n",
     "\n",
@@ -890,31 +760,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "2c0bf5fc-ab32-4f33-8f26-904ff10635a5",
    "metadata": {
     "id": "2c0bf5fc-ab32-4f33-8f26-904ff10635a5"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Score: 0.93147576\n",
-      "Product: Metal Garden Bench with Cushion\n",
-      "Category: Garden Furniture\n",
-      "Description: is a stylish and comfortable metal garden bench, complete with a cushion for added support.\n",
-      "\n",
-      "\n",
-      "Score: 0.9304026\n",
-      "Product: Garden Dining Set with Swivel Chairs\n",
-      "Category: Garden Furniture\n",
-      "Description: is a functional and comfortable garden dining set, including a table and chairs with swivel seats for convenience.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Elastic Learned Sparse Encoder - ELSER\n",
     "\n",
