adds e5_semantic_text_search_results

--- a/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/updated-ecommerce_dense_sparse_project.ipynb
+++ b/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/updated-ecommerce_dense_sparse_project.ipynb
@@ -781,9 +781,9 @@
     "    source_excludes=[\"*_description_vector\"],  # Exclude vector fields from response\n",
     ")\n",
     "\n",
-    "elser_semantic_text_search_results = resp[\"hits\"][\"hits\"]\n",
-    "results_list.append({\"elser_semantic_text_search\": sparse_semantic_search_results})\n",
-    "print_search_results(elser_semantic_text_search_results)"
+    "e5_semantic_text_search_results = resp[\"hits\"][\"hits\"]\n",
+    "results_list.append({\"e5_semantic_text_search\": e5_semantic_text_search_results})\n",
+    "print_search_results(e5_semantic_text_search_results)"
    ]
   },
   {
