--- a/notebooks/enterprise-search/app-search-engine-exporter.ipynb
+++ b/notebooks/enterprise-search/app-search-engine-exporter.ipynb
@@ -59,7 +59,7 @@
    "source": [
     "## Connect to Elasticsearch\n",
     "\n",
-    "ℹ️ We're using an Elastic Cloud deployment of Elasticsearch for this notebook. If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?onboarding_token=search&utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial. This notebook is designed to be run against an Elasticsearch deployment running on version 8.18 or higher.\n",
+    "ℹ️ We're using an Elastic Cloud deployment of Elasticsearch for this notebook. See [Connecting to a self-managed cluster](https://www.elastic.co/docs/reference/elasticsearch/clients/python/connecting#connect-self-managed-new) if you self-host your deployment. This notebook is designed to be run against an Elasticsearch deployment running on version 8.18 or higher.\n",
     "\n",
     "We'll use the **Cloud ID** to identify our deployment, because we are using Elastic Cloud deployment. To find the Cloud ID for your deployment, go to https://cloud.elastic.co/deployments and select your deployment. \n",
     "\n",
