--- a/notebooks/enterprise-search/app-search-engine-exporter.ipynb
+++ b/notebooks/enterprise-search/app-search-engine-exporter.ipynb
@@ -637,7 +637,7 @@
    "source": [
     "## Using semantic text fields for ingest and query\n",
     "\n",
-    "First, we'll augment our text fields with `semantic_text` fields in our index. We'll do this by creating a `semtantic_text` field, and providing a `copy_to` directive from the original source field to copy the text into our semantic text fields.\n",
+    "First, we'll augment our text fields with `semantic_text` fields in our index. We'll do this by creating a `semantic_text` field, and providing a `copy_to` directive from the original source field to copy the text into our semantic text fields.\n",
     "\n",
     "In the example below, we are using the `description` and `title` fields from our example index to add semantic search on those fields."
    ]
