Fix masked fields for test

--- a/notebooks/search/02-hybrid-search.ipynb
+++ b/notebooks/search/02-hybrid-search.ipynb
@@ -249,30 +249,35 @@
       "Title: Python Crash Course\n",
       "Summary: A fast-paced, no-nonsense guide to programming in Python\n",
       "Rank: 1\n",
+      "Score: 0.032786883\n",
       "\n",
       "ID: HwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2019-10-29\n",
       "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
       "Summary: A guide to pragmatic programming for software engineers and developers\n",
       "Rank: 2\n",
+      "Score: 0.03175403\n",
       "\n",
       "ID: JAOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2018-12-04\n",
       "Title: Eloquent JavaScript\n",
       "Summary: A modern introduction to programming\n",
       "Rank: 3\n",
+      "Score: 0.016129032\n",
       "\n",
       "ID: IwOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2015-03-27\n",
       "Title: You Don't Know JS: Up & Going\n",
       "Summary: Introduction to JavaScript and programming as a whole\n",
       "Rank: 4\n",
+      "Score: 0.015873017\n",
       "\n",
       "ID: KAOa7osBiUNHLMdf3q2r\n",
       "Publication date: 2012-06-27\n",
       "Title: Introduction to the Theory of Computation\n",
       "Summary: Introduction to the theory of computation and complexity theory\n",
-      "Rank: 5\n"
+      "Rank: 5\n",
+      "Score: 0.015873017\n"
      ]
     }
    ],
