small updates to wording

--- a/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/ecommerce_dense_sparse_project.ipynb
+++ b/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/ecommerce_dense_sparse_project.ipynb
@@ -44,7 +44,7 @@
     "- Elastic 9.0 deployment or later on either a local, cloud, or serverless environment\n",
     "\n",
     "\n",
-    "We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html). You can use a [free trial here](https://cloud.elastic.co/registration?onboarding_token=vectorsearch&utm_source=github&utm_content=elasticsearch-labs-notebook) to get started."
+    "We'll be using an [Elastic Serverless](https://www.elastic.co/docs/deploy-manage/deploy/elastic-cloud/serverless) instance. You can use a [free trial here](https://cloud.elastic.co/registration?onboarding_token=vectorsearch&utm_source=github&utm_content=elasticsearch-labs-notebook) to get started."
    ]
   },
   {
@@ -58,7 +58,7 @@
     "\n",
     "To get started, we'll need to connect to our Elastic deployment using the Python client.\n",
     "\n",
-    "Because we're using an Elastic Cloud deployment, we'll use the **Cloud Endpoint** and **Cloud API Key** to identify our deployment. These may be found within Kibana by following the instructions [here](https://www.elastic.co/docs/deploy-manage/api-keys/elastic-cloud-api-keys).\n"
+    "Because we're using an Elastic Cloud deployment, we'll use the **Elastic Cloud Endpoint** and **Elastic Cloud API Key** to identify our deployment. These may be found within Kibana by following the instructions [here](https://www.elastic.co/docs/deploy-manage/api-keys/elastic-cloud-api-keys).\n"
    ]
   },
   {
@@ -572,7 +572,7 @@
     "\n",
     "\n",
     "- Lexical Search\n",
-    "- Semantic Search \n",
+    "- Semantic Search\n",
     "    - ELSER Semantic Search (Sparse Vector)\n",
     "    - E5 Semantic Search (Dense Vector)\n",
     "    - ELSER Semantic Search with `semantic_text`\n",
