--- a/supporting-blog-content/twelvelabs-bedrock-marengo/blog_post_marengo_elasticsearch_bedrock.ipynb
+++ b/supporting-blog-content/twelvelabs-bedrock-marengo/blog_post_marengo_elasticsearch_bedrock.ipynb
@@ -120,7 +120,7 @@
     "\n",
     "# S3 Configuration\n",
     "# S3_BUCKET_NAME = \"<YOUR_S3_BUCKET_NAME>\" # TODO: Replace with your S3 bucket name\n",
-    "S3_BUCKET_NAME = os.getenv(\"S3_BUCKET_NAME\", \"derickson-twelvelabs-video\")\n",
+    "S3_BUCKET_NAME = os.getenv(\"S3_BUCKET_NAME\", \"your_s3_bucket_name\")\n",
     "S3_VIDEOS_PATH = \"videos\"\n",
     "S3_IMAGES_PATH = \"images\"\n",
     "S3_EMBEDDINGS_PATH = \"embeddings\"\n",
